# rust-pretty-sqlite

./: Cargo.toml  README.md
examples/: readme.rs
src/: error.rs  lib.rs  options.rs  pretties.rs
tests/: test-simple.rs
tests/support/: mod.rs
