[package]
name = "pretty-sqlite"
version = "0.0.4-WIP"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"
description = "Simple, Minimalistic Pretty Prints for SQLite using rusqlite"
categories = ["development-tools::testing"]
keywords = [
	"sqlite",
  "pretty-print",
	"database",
  "rusqlite"
]
homepage = "https://github.com/jeremychone/rust-pretty-sqlite"
repository = "https://github.com/jeremychone/rust-pretty-sqlite"


[lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For exploratory dev.

[dependencies]
rusqlite = { version = "0.33" }
tabled = { version = "0.17" }
# -- Others
derive_more = {version = "1.0.0", features = ["from"] }

[dev-dependencies]
rusqlite = { version = "0.33", features = ["bundled"] }
