[package]
name = "pretty-sqlite"
version = "0.1.1-WIP"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Simple, Minimalistic Pretty Prints for SQLite using rusqlite (for test & dev)"
categories = ["development-tools::testing"]
keywords = [
	"sqlite",
  "pretty-print",
	"database",
  "rusqlite"
]
homepage = "https://github.com/jeremychone/rust-pretty-sqlite"
repository = "https://github.com/jeremychone/rust-pretty-sqlite"


[lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For exploratory dev.

[dependencies]
rusqlite = { version = "0.35" }
tabled = { version = "0.18" }
# -- Others
derive_more = {version = "2", features = ["from", "display"] }

[dev-dependencies]
rusqlite = { version = "0.35", features = ["bundled"] }
